syntax = "proto3";
package codern.auth;

message GoogleAuthUrlRequest {}

message GoogleAuthUrlResponse {
  string url = 1;
}

message GoogleAuthRequest {
  string code = 1;
  string ipAddress = 2;
  string userAgent = 3;
}

message GoogleAuthResponse {
  bool success = 1;
  string redirectUrl = 2;
  optional string cookie = 3;
}
